fix: bugs in asm and pass 70/91